--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
         <table>
             <thead>
                 <tr>
-                    <th>Author</th>
                     <th>Title</th>
+                    <th>Author</th>
                     <th>Pages</th>
                     <th>Read</th>
                 </tr>
             </thead>
-            <tbody></tbody>
+            <tbody>
+                
+            </tbody>
         </table>
         <button type="button" id="book-adder">+</button>
     </main>
@@ -28,12 +30,12 @@
         <form action="#">
             <button type="button" id="exit">X</button>
             <div>
-                <label for="author">Author</label>
-                <input type="text" id="author" name="author" required>
-            </div>
-            <div>
                 <label for="title">Title</label>
                 <input type="text" id="title" name="title" required>
+            </div>
+            <div>
+                <label for="author">Author</label>
+                <input type="text" id="author" name="author" required>
             </div>
             <div>
                 <label for="pages">Pages</label>
