Add a dysfunctional remove slot button and data-index on rows

--- a/index.html
+++ b/index.html
@@ -20,7 +20,21 @@
                 </tr>
             </thead>
             <tbody>
-                
+                <!-- <tr>
+                    <td>
+                        <button type="button" class="remove">-</button>
+                        Mein komf
+                    </td>
+                    <td>
+                        Adolf Hitler
+                    </td>
+                    <td>
+                        23
+                    </td>
+                    <td>
+                        false
+                    </td>
+                </tr> -->
             </tbody>
         </table>
         <button type="button" id="book-adder">+</button>
