Add functionality to remove and read check inputs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <main>
         <h1>My Library</h1>
         <table>
+            <colgroup>
+                <col class="title-col">
+                <col class="author-col">
+                <col class="pages-col">
+                <col class="read-col"> 
+            </colgroup>
             <thead>
                 <tr>
                     <th>Title</th>
@@ -20,21 +26,6 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- <tr>
-                    <td>
-                        <button type="button" class="remove">-</button>
-                        Mein komf
-                    </td>
-                    <td>
-                        Adolf Hitler
-                    </td>
-                    <td>
-                        23
-                    </td>
-                    <td>
-                        false
-                    </td>
-                </tr> -->
             </tbody>
         </table>
         <button type="button" id="book-adder">+</button>
